# python-opentsdbclient

./: README.rst  setup.cfg
opentsdbclient/: README.md  client.py  opentsdberrors.py  opentsdbobjects.py  opentsdbquery.py  templates.py
opentsdbclient/rest/: README.md  client.py  opentsdberrors.py  opentsdbmetric.py  opentsdbquery.py  otsdbErrors.py  utils.py
opentsdbclient/tests/: __init__.py  test_client.py  test_errors.py  test_objects.py  test_query.py  test_rest_client.py
