[metadata]
name = pyotsdb
summary = OpenTSDB REST Client Library
description-file = README.rst
author = Christophe Delaere
author-email = christophe.delaere@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    opentsdbclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
